working on Text Overlapping issue

--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ body {
   font-weight: bold;
 }
 
-h1, h2, h3 {
+
+h1, h2, h3, h4 {
   margin: 0 0 30px 0;
   text-align: center;
   font-weight: normal;
